*Empty MediaWiki Message*

--- a/د_سږو_بوغمه.mw
+++ b/د_سږو_بوغمه.mw
@@ -1,4 +1,4 @@
-'''د سږو بوغمه''' ''(امريکايي انګرېزي: Pulmonary Edema يا په برتانيوي انګرېزي: Pulmonary Odema، په يوناني οίδημα)''، د سږو پړسوب او يا په سږو کې د مايعاتو د راغونډېدنې ناروغي ده. د سږو دغه ناروغي په سااخيستنيز غونډال کې ناسوبوالی رامېنځ ته کوي او دا ناروغي د دې سبب ګرځي چې په سږو کې د ګازونو په ادلون بدلون کې خنډ رامېنځ ته شي چې بيا د ساه اخيستنې عدم کفايه يا ناتواني رامېنځ ته کوي. د سږو بوغمه په دوه حالتونو کې راپېښېدلای شي، لومړی يا خو دا ناروغي د زړه د عدم کفايې په سبب هغه وخت چې زړه د سږو په اکر کې مايعات و نشي وېستلای نو په دغه وخت کې د کارډيوجېنېک پلمونېري ايډيما يا د زړه اړونده د سږو بوغمه پېښېږي. دويم دا چې د سږو د ووبونو د ټپي کېدو په سبب نان کارډيوجېنېک پلمونېري ايډيما يا د زړه نااړونده د سږو بوغمه راپېښېدلای شي.<ref name=Ware>Ware LB, Matthay MA. Acute pulmonary edema. ''N Engl J Med'' 2005;353:2788-96. PMID 16382065.</ref> د دغې ناروغۍ درملنه د ناروغۍ په لامل پورې اړه لري، خو په عين وخت کې د ناروغ د سږو د سااخيستنې د کړنې په ښه والي کې بايد ډېره پاملرنه وشي او هغه لاملونه چې د سااخيستنې خنډ ګرځي د هغو له مېنځه وړلو هڅه پکار ده.
+'''د سږو [[بوغمه]]''' ''(امريکايي انګرېزي: Pulmonary Edema يا په برتانيوي انګرېزي: Pulmonary Odema، په يوناني οίδημα)''، د سږو پړسوب او يا په سږو کې د مايعاتو د راغونډېدنې ناروغي ده. د سږو دغه ناروغي په سااخيستنيز غونډال کې ناسوبوالی رامېنځ ته کوي او دا ناروغي د دې سبب ګرځي چې په سږو کې د ګازونو په ادلون بدلون کې خنډ رامېنځ ته شي چې بيا د ساه اخيستنې عدم کفايه يا ناتواني رامېنځ ته کوي. د سږو بوغمه په دوه حالتونو کې راپېښېدلای شي، لومړی يا خو دا ناروغي د زړه د عدم کفايې په سبب هغه وخت چې زړه د سږو په اکر کې مايعات و نشي وېستلای نو په دغه وخت کې د کارډيوجېنېک پلمونېري ايډيما يا د زړه اړونده د سږو بوغمه پېښېږي. دويم دا چې د سږو د ووبونو د ټپي کېدو په سبب نان کارډيوجېنېک پلمونېري ايډيما يا د زړه نااړونده د سږو بوغمه راپېښېدلای شي.<ref name=Ware>Ware LB, Matthay MA. Acute pulmonary edema. ''N Engl J Med'' 2005;353:2788-96. PMID 16382065.</ref> د دغې ناروغۍ درملنه د ناروغۍ په لامل پورې اړه لري، خو په عين وخت کې د ناروغ د سږو د سااخيستنې د کړنې په ښه والي کې بايد ډېره پاملرنه وشي او هغه لاملونه چې د سااخيستنې خنډ ګرځي د هغو له مېنځه وړلو هڅه پکار ده.
 
 ==نښې نښانې==
 د دغې ناروغۍ نښې نښانې، د ساه لنډېدنه او د سا اخيستلو ستونزه، د ټوخي سره د وينې رابرسېرېدنه، غېرنورماله خوله، اضطراب او د جلد زېړوالی دی. د سږو د بوغمې سره يوه عامه ښکاره نښه د ګلابي رنګه بلغم راپېدا کېدل دي. که چېرته د دغې ناروغۍ درملنه په وخت سره و نه شي نو دا ناروغۍ د کوما تر کچې او آن د مړينې سبب هم ګرځي، خو دا ټول بيا د ساه اخيستنې پېچلتياؤ، لکه هايپوآکسيا يا په وينه کې د آکسيجن د کمښت سره تړلي دي. که چېرته دغه ناروغي په ورو ورو پرمختګ کړی وي، نو په ناروغ کې د مايعاتو پراړوالی (له اندازې زيات د مايعاتو ډېرښت) راڅرګندېږي. چې د همدغه ناانډولتوب په نتيجه کې ناروغ د شپې لخوا له خوبه د ميتيازو لپاره راپورته کېږي، د ناروغ بوجلکو کې بوغمه او پړسوب (پښې پړسېږې، په عامه توګه دغه ډول پړسوب ته پيټينګ بوغمه وايي، چې که چېرته د ناروغ د پښو جلد څوک په دوه ګوتو کېښکاږي او بيا ګوتې څوک ليري کړي نو جلد به په ځنډ بېرته خپلې نورمالې بڼې ته راوګرځي.) راڅرګندېږي، همدا شان اورتوپنيا يا ستوني ستخ ساه لنډي (کله چې ناروغ ستونې ستخ څملاستلی وي نو د ناروغ ساه لنډېږي او په نورماله توګه ساه نه شي اخيستلی)، او پاراوکسيمال نوکټرنال ډسپنيا يا د شپې لخوا ناڅاپي شديده ساه لنډي (په شپه کې ناڅاپي شديده ساه لنډي پېښېدل) هم څرګنده د دغې ناروغۍ څرګندې نښې نښانې دي.
