--- a/عبدالرشيد_دوستم.mw
+++ b/عبدالرشيد_دوستم.mw
@@ -1,3 +1,5 @@
 په منځۍ اسیا د تزاري روس د تاړاکونو له لامله د هغه ځای دیندوسته مسلمانان دې ته اړ شول، چې ګاونډی هېواد (افغانستان) ته پنا یوسي، د مهاجرت دا لړۍ همداسې له ۱۹مې پېړۍ څخه نیولې تر ۲۰مې پېړۍ پورې روانه وه، چې د شلمې پېړۍ په دویمه لسیزه کې د توردي کورنۍ هم د افغانستان مخه وکړه او د خواجه دوکوه په سیمه کې اباد شول.
 
 تر ۱۹۳۰ز کال پورې دا کورنۍ پدې وتوانېده چې د یو خټین کور سره سره یوه ټوټه زمکه هم ترلاسه کړي، د شلمې پېړۍ په څلورمه لسیزه کې د توردی کوسې له یوې اوزبکې مور څخه په خواج دوکوه کې زېږول کېږي، چې د لومړي افغان په توګه چې په افغانستان کې وږېږېد، له افغانانو څخه په اغیزمنتیا یې د نوم پرې عبدالرشید (چې د مسلمانو پښتنو لومړی نیکه یادېږي) کېښود.
+
+د امو سیند وراخوا اوزبک مهاجر توردي ( د دوستم غورنیکه) د ۱۹۳۰ز کال په وروستیو کې ومړ، حال دا چې د مړینې پر وخت یې ۲۰ تنه د کورنۍ غړي په افغان خاوره پرېښودل.
