*Empty MediaWiki Message*

--- a/عبدالرشيد_دوستم.mw
+++ b/عبدالرشيد_دوستم.mw
@@ -4,3 +4,7 @@
 تر ۱۹۳۰ز کال پورې دا کورنۍ پدې وتوانېده چې د یو خټین کور سره سره یوه ټوټه زمکه هم ترلاسه کړي، د شلمې پېړۍ په څلورمه لسیزه کې د توردی کوسې له یوې اوزبکې مور څخه په خواج دوکوه کې زېږول کېږي، چې د لومړي افغان په توګه چې په افغانستان کې وږېږېد، له افغانانو څخه په اغیزمنتیا یې د نوم پرې عبدالرشید (چې د مسلمانو پښتنو لومړی نیکه یادېږي) کېښود.
 
 د امو سیند وراخوا اوزبک مهاجر توردي ( د دوستم غورنیکه) د ۱۹۳۰ز کال په وروستیو کې ومړ، حال دا چې د مړینې پر وخت یې ۲۰ تنه د کورنۍ غړي په افغان خاوره پرېښودل.
+
+==دا هم وګورﺉ===
+==بهرنۍ تړن==
+==سرچینې==
