/* دا هم وګورﺉ= */

--- a/عبدالرشيد_دوستم.mw
+++ b/عبدالرشيد_دوستم.mw
@@ -5,6 +5,7 @@
 
 د امو سیند وراخوا اوزبک مهاجر توردي ( د دوستم غورنیکه) د ۱۹۳۰ز کال په وروستیو کې ومړ، حال دا چې د مړینې پر وخت یې ۲۰ تنه د کورنۍ غړي په افغان خاوره پرېښودل.
 
-==دا هم وګورﺉ===
+==دا هم وګورﺉ==
+
 ==بهرنۍ تړن==
 ==سرچینې==
