robot  Modifying: [[ur:مرزا حسین علی نوری]]

--- a/بهاءالله.mw
+++ b/بهاءالله.mw
@@ -383,5 +383,5 @@ While the above passage clarifies that it is considered disrespectful to display
 [[ta:பஹாவுல்லா]]
 [[th:พระบาฮาอุลเลาะห์]]
 [[tr:Mirza Hüseyin Ali]]
-[[ur:مرزا حسین علی نوری بہاء اللہ]]
+[[ur:مرزا حسین علی نوری]]
 [[zh:巴哈欧拉]]
