--- a/موزامبیق.mw
+++ b/موزامبیق.mw
@@ -373,6 +373,7 @@ The wide range of religious affiliations can be partially attributed to the wide
 [[tet:Mosambike]]
 [[tg:Мозамбик]]
 [[th:ประเทศโมซัมบิก]]
+[[ti:ሞዛምቢክ]]
 [[tl:Mozambique]]
 [[tr:Mozambik]]
 [[ts:Mozambique]]
