--- a/خيال_محمد_کټوازی.mw
+++ b/خيال_محمد_کټوازی.mw
@@ -20,7 +20,7 @@
 #پرېشانه ولولې - شعري ټولګه 
 
 == د شعر بېلګه ==
-قرباني
+<center>قرباني
 {{شعر}}
 {{ب|په غبرګو زولنو کې د اخـــــــتيار سره درځم|ستا غيږې ته مرګيه له ايـــــــــثار سره درځم}}
 {{ب|نوبت ته دې ولاړ يمه د نېــــــل حريصه روده|لږ صبر راته وکړه له سيـــــــــنګار سره درځم}}
@@ -35,7 +35,7 @@
 {{ب|د ''خيال'' په تصور کي د وطن د الـهام ناوې|سلام ته دې د عشق له افتخار ســـــــره درځم}}
 {{د شعر پای}}
 د څرخي پله زندان ١٣٦٤ ل
-
+</center>
 
 
 [[وېشنيزه: پښتانه شاعران]]
