*Empty MediaWiki Message*

--- a/مولوي_گل_رحمن_ديوبندي.mw
+++ b/مولوي_گل_رحمن_ديوبندي.mw
@@ -1,4 +1,4 @@
-مولوي ګل رحمن ديوبندي.jpg
+[[انځور:مولوي ګل رحمن ديوبندي.jpg|thumb|289px|قريب الرحمن سعيد]]
 '''مولوي ګل رحمن دیوبندي''' د افغانستان يو ديني مخور عالم، پښتون مجاهد، د افغانستان د اسلامي ګوند د علماؤ غړی، شاعر او ليکوال ؤ. 
 
 == مخينه ==
