--- a/مولوي_گل_رحمن_ديوبندي.mw
+++ b/مولوي_گل_رحمن_ديوبندي.mw
@@ -1,4 +1,4 @@
-[[انځور:مولوي ګل رحمن ديوبندي.jpg|thumb|289px|قريب الرحمن سعيد]]
+[[انځور:مولوي ګل رحمن ديوبندي.jpg|thumb|289px|مولوي ګل رحمن ديوبندي]]
 '''مولوي ګل رحمن دیوبندي''' د افغانستان يو ديني مخور عالم، پښتون مجاهد، د افغانستان د اسلامي ګوند د علماؤ غړی، شاعر او ليکوال ؤ. 
 
 == مخينه ==
