*Empty MediaWiki Message*

--- a/مولوي_گل_رحمن_ديوبندي.mw
+++ b/مولوي_گل_رحمن_ديوبندي.mw
@@ -1,5 +1,5 @@
 [[انځور:مولوي ګل رحمن ديوبندي.jpg|thumb|220px|مولوي ګل رحمن ديوبندي]]
-'''مولوي ګل رحمن دیوبندي''' د افغانستان يو ديني مخور عالم، پښتون مجاهد، د افغانستان د اسلامي ګوند د علماؤ غړی، شاعر او ليکوال ؤ. 
+'''مولوي ګل رحمن دیوبندي''' (۱۹۳۲ ز. - ۱۹۹۶ ز.) د افغانستان يو ديني مخور عالم، پښتون مجاهد، د افغانستان د اسلامي ګوند د علماؤ غړی، شاعر او ليکوال ؤ. 
 
 == مخينه ==
 نوموړی د غلام رسول خان زوی د ننګرهار د روداتو د ولسوالۍ د مرکز حصارشاهي په شاه رسول نومي (کوچیانو) کلي کې په ۱۹۳۲ زیږیز کال کې زیږیدلي دی. په قوم نته خیل (مومند) او په خټه پښتون دې.
