*Empty MediaWiki Message*

--- a/خوست_ولايت.mw
+++ b/خوست_ولايت.mw
@@ -11,21 +11,21 @@
 |ګڼه ګونه= 
 |ژبې= [[پښتو]]
 }} 
-<font face="Tahoma">
 
-[[Image:3rd Battalion, 3rd Marines - Afghanistan.jpg|thumb|right|220px|U.S. Marines searching for Taliban forces in Khost province in Afghanistan.]]
-*[[Bak District]]
-*[[Gurbuz District]]
-*[[Jaji Maydan District]]
-*[[Khost (Matun) District]]
-*[[Ismailkhel&Mandozi District]]
-*[[Musa Khel District]]
-*[[Nadir Shah Kot District]]
-*[[Qalandar District]]
+
+[[Image:3rd Battalion, 3rd Marines - Afghanistan.jpg|thumb|left|220px|د امريکا د سمندري ځواک يو پوځي د طالبانو د پلټلو پر مهال.]]
+*[[د باک ولسوالۍ]]
+*[[د ګوربزو ولسوالۍ]]
+*[[د ځاځي ميدان ولسوالۍ]]
+*[[د خوست (متون) ولسوالۍ]]
+*[[د اسماعيل خېلو او مندوزيو ولسوالۍ]]
+*[[د موسی خېلو ولسوالۍ]]
+*[[د نادر شاه کوټ ولسوالۍ]]
+*[[د قلندر ولسوالۍ]]
 *[[Sabari District]]
-*[[Shamal District]]
+*[[د شمال ولسوالۍ]]
 *[[Spera District]]
-*[[Tani District]]
+*[[د تڼيو ولسوالۍ]]
 *[[Tere Zayi District]]
 
 {{د افغانستان ولايتونه}}
