*Empty MediaWiki Message*

--- a/موسی_خېل_ولسوالۍ_(خوست).mw
+++ b/موسی_خېل_ولسوالۍ_(خوست).mw
@@ -1,1 +1,1 @@
-دا ولسوالی د خوست ولایت مرکز پہ شمال خوا کی پرتہ ولسوالی دہ۔پدی ولسوالی کی د منگل قوم خلک اوسیژی
+دا ولسوالۍ د خوست ولایت د پلازمېنې په سهېل خوا کی پرته ولسوالی دہ. په دی ولسوالی کی د منگل قوم خلک اوسیږي
