--- a/سعدالدين_شپون.mw
+++ b/سعدالدين_شپون.mw
@@ -3,7 +3,8 @@
 خوږ نثر او د څيری کښنې توان دوی له ډيرو معاصرو کيسه ليکوالو بېلوي . او په دې ډول ښاغلی شپون بېل سبک خپلوي .
 
 == مخينه ==
-ښاغلی شپون د افغانستان د کندز په ولايت کې زيږيدلى دى. 
+SADUDDIN SHPOUN.JPG
+ښاغلی شپون د افغانستان د کندز په ولايت کې زيږيدلى دى.
 
 == ادبي ژوند ==
 د ښاغلي شپون له لوری د کندز د خان اباد سيمې انځورونه ښايي په اوسني پښتو داستاني اثارو کې بې جوړې وي .
