*Empty MediaWiki Message*

--- a/سعدالدين_شپون.mw
+++ b/سعدالدين_شپون.mw
@@ -3,7 +3,7 @@
 خوږ نثر او د څيری کښنې توان دوی له ډيرو معاصرو کيسه ليکوالو بېلوي . او په دې ډول ښاغلی شپون بېل سبک خپلوي .
 
 == مخينه ==
-SADUDDIN SHPOUN.JPG
+[[Image:SADUDDIN SHPOUN.JPG|thumb|200px|سعدالدين شپون]]
 ښاغلی شپون د افغانستان د کندز په ولايت کې زيږيدلى دى.
 
 == ادبي ژوند ==
