*Empty MediaWiki Message*

--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -1,6 +1,6 @@
 [[انځور:غوث خيبري.jpg|thumb|289px|غوث خيبري]]
 
-'''غوث خيبري''' يو افغان ليکوال او د [[راډيو افغانستان]] د [[پښتونستان]] د خپرونې او د [[هند]] [[د آل انډيا راډيو]] د پښتو خپرونې پخوانی وياند دی. هغه د کيسو ګڼ شمېر کتابونه ليکلي او همداراز يې د مستندو تاریخي کيسو هم يو شمېر کتابونه چاپ شوي. 
+'''غوث خيبري''' (۱۳۱۲ ل.) (''انګرېزي: Ghaus Khaibari'') يو افغان ليکوال او د [[راډيو افغانستان]] د [[پښتونستان]] د خپرونې او د [[هند]] [[د آل انډيا راډيو]] د پښتو خپرونې پخوانی وياند دی. هغه د کيسو ګڼ شمېر کتابونه ليکلي او همداراز يې د مستندو تاریخي کيسو هم يو شمېر کتابونه چاپ شوي. 
 
 == مخينه ==
 نوموړی د پاينده ګل خان زوی او د شيخ عبدالرحمن لمسی دی چې په ۱۳۱۲ ل. هـ کال کې د ننګرهار ولايت د کامې د ولسوالۍ د سنګر سرای په کلي کې زېږېدلی دی. 
