--- a/محمد_يوسف_خدمتگار_مزدورزوی.mw
+++ b/محمد_يوسف_خدمتگار_مزدورزوی.mw
@@ -19,4 +19,14 @@
 #هيلې يادونه او منزلونه - چاپکال ۱۳۸۰ ل
 #پرهرونه تصويرونه - چاپکال ۱۳۸۳ ل
 #د زمانې غږ د خلکو غږ - چاپکال ۱۳۸۵
-[[Category: پښتانه شاعران]]
+
+
+
+
+
+
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه: افغاني ليکوال]]
+[[وېشنيزه: پښتانه ليکوال]]
