--- a/محمد_داؤد_ميره_کی.mw
+++ b/محمد_داؤد_ميره_کی.mw
@@ -29,4 +29,4 @@
 [[وېشنيزه:پښتانه سياستوال]]
 [[وېشنيزه:پښتانه]]
 [[وېشنيزه:د ولسمشرۍ کانديدان]]
-[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه ليکوال]]
