--- a/عبدالحی_حبيبي.mw
+++ b/عبدالحی_حبيبي.mw
@@ -1,4 +1,5 @@
 {{صاف}}
+[[انځور:پوهاند علامه عبدالحى حبيبي.gif|thumb|289px|علامه پوهاند عبدالحي حبيبي]]
 [[انځور:Habibi.JPG|thumb|289px|علامه پوهاند عبدالحي حبيبي]]
 '''علامه پوهاند عبدالحی حبيبي''' ( ۱۲۸۹ - ۱۳۶۳ لمريز کالونه) د علامه حبيب الله كندهاري ( حبو اخندزاده) د درنې كورنۍ پر آسمان تر ټولو روڼ او ځلاند ستورى ارواښاد علامه پوهاند عبدالحى حبيبي دى چې زموږ د هېواد د معاصر فرهنګي بهير د "سرلاري" وياړ يې ګټلى دى.
 <br>
