--- a/عبدالحی_حبيبي.mw
+++ b/عبدالحی_حبيبي.mw
@@ -147,6 +147,9 @@ _ د خوشحال پېژندني لومړۍ خښته دده په لاس كښېښ
 
 
 [[وېشنيزه: پښتانه شاعران]]
-[[وېشنيزه: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه ليکوال]]
 [[وېشنيزه: پښتانه تاريخپوهان]]
 [[وېشنيزه:د افغانستان نوميالي]]
+[[وېشنيزه: پښتانه]]
+[[وېشنيزه: افغانان]]
+[[وېشنيزه: افغاني ليکوال]]
