--- a/د_پښتنو_ټولنیز_ولسواک_گوند.mw
+++ b/د_پښتنو_ټولنیز_ولسواک_گوند.mw
@@ -3,45 +3,28 @@
 
 
 == بنسټی ارزښتونه ==
-۱ـ د پښتنو او د پښتنو د وطن پښتونخوا ویش سوله په خاطر کی اچولی ده. د سولی د ژوغورلو لپاره د ټولو پښتنو یووالی او د پښتنو د خپل خپلواک هیواد (سټیټ دولت ) پښتونخوا جوړونه د پښتنو د ټولنیز ولسولیز ګوند تر هر څه مهمه تر ټولو ستره دنده او بنسټی غوښتنه ده. 
-
-۲ـ د پښتونخوا د هیواد (سټیټ دولت ) واک به د اولس په لاس کی وی. ددی د پاره په کار دی چې د پښتونخوا د پښتنو د اولس ویش،جغرافیائی او اداری اسانتیاووله مخی په سیمو (سوبو / ایالتونو ) وویشل شی او هره سیمه بیا په لویو ولسوالیو ( ضلعو ) او ولسوالیو ( تحصیلونو ) ویشل شوی وی. هره سیمه ( سوبه / ایالت ) به ځانته سیمه ایزه جرګه (سوبائی / ایالتی جرګه ) او سربیره پر دی به د پښتونخوا یوه ملی جرګه (قومی جرګه ) او بله د مشرانو جرګه (سینټ ) وی. د سیمی ( سوبا ئی / ایالتی ) جر ګه به د خلپو غړو څخه د سیمی (سوبا ئی / ایالتی ) حکومتونه او ملی جرګه ( قومی جرګه ) به د خپلو غړو څخه مرکزی حکومت ټاکی.
+#د پښتنو او د پښتنو د وطن پښتونخوا ویش سوله په خاطر کی اچولی ده. د سولی د ژوغورلو لپاره د ټولو پښتنو یووالی او د پښتنو د خپل خپلواک هیواد (سټیټ دولت ) پښتونخوا جوړونه د پښتنو د ټولنیز ولسولیز ګوند تر هر څه مهمه تر ټولو ستره دنده او بنسټی غوښتنه ده. 
+#د پښتونخوا د هیواد (سټیټ دولت ) واک به د اولس په لاس کی وی. ددی د پاره په کار دی چې د پښتونخوا د پښتنو د اولس ویش،جغرافیائی او اداری اسانتیاووله مخی په سیمو (سوبو / ایالتونو ) وویشل شی او هره سیمه بیا په لویو ولسوالیو ( ضلعو ) او ولسوالیو ( تحصیلونو ) ویشل شوی وی. هره سیمه ( سوبه / ایالت ) به ځانته سیمه ایزه جرګه (سوبائی / ایالتی جرګه ) او سربیره پر دی به د پښتونخوا یوه ملی جرګه (قومی جرګه ) او بله د مشرانو جرګه (سینټ ) وی. د سیمی ( سوبا ئی / ایالتی ) جر ګه به د خلپو غړو څخه د سیمی (سوبا ئی / ایالتی ) حکومتونه او ملی جرګه ( قومی جرګه ) به د خپلو غړو څخه مرکزی حکومت ټاکی.
 د مشرانو جرګه ( سینټ ) به د سیمو ( سوبو / ایالتونو ) د حکومتونو د مشرانو او د هری سیمی ( سوبی / ایالت ) د وګړو په حساب د سیده ټاکل شوو نماینده ګانو څخه جوړه شوی وی. د ملی (قومی ) اوسیمه ایزو ( سوبائی / ایالتی ) جرګو په پریکړو به غور کوی او جمهوریس به نوموی او د تا ئید لپاره به ئی لویه جرګه راغواړی د ملی ( قومی ) او سیمه ایزو ( سوبا ئی / ایالتی ) جرګو غړی په سلو کی اتیا ( ۸۰ ) د ولسوالیو ( تحصیلونو ) په حساب د ولسوالیو (تحصیلونو ) د وګړو له خوا په سیده توګه د ازادی ټاکنی د لاری او په سلو کی شل ( ۲۰ ) د هغه ګوند ونو د لاری چې په سلو کی ئی پنځه ( ۵ ) رائی ګټلی وی په غیری سیده توګه ټاکل کيږی.
 د پښتونخوا هر اوسیدونکی چې عمر ئی د اتلس ( ۱۸ ) کلونو څخه کم نه وی د دوه ووټونو حق لری چې یو به ګوند او بل به کاندید ته ورکوی خو خپله دملی ( قومی ) او سیمه ایزو ( سوبائی / ایالتی ) جرګو لپاره هله خپل ځان کاندید ولی شی چې عمر ئی د دیرش ( ۳۰ ) کلونو څخه کم نه وی.
-
-۳ ـ د پښتنو ټولنیز ولسولیز ګوند د خپل مقدس دین اسلام د پر مختګ او ټینګښت د پاره هلی ځلی کوی او د نورو دینی عقیدوته په درنه سترګه ګوری.
-
-۴ـ ژبه او کلتور د قام او وطن په ابادۍ کی مهم رول لوبوی لدی امله د پښتنو ټولنیز ولسولیز ګوند د خپلی ژبی او کلتور وده او پر مختګ خپله بنسټی دنده ګڼی او غواړی چې د هیواد ( سټیټ / دولت ) دری واړه قوی ( قانون جوړونکی ، اجرائیه او عدلیه ) د پښتونولئ په بنسټ ولاړوی او د پښتنو د جرګو پریکړې رسمی خوی پیدا کړی.
-
-۵ـ د تولید په وسایلود خصوصی ملکیت د ژغورلو او تقویه کولو حق لری تر هغو چې د عادلانه ټولنیز نظم مخه ونه نیسی.
+#د پښتنو ټولنیز ولسولیز ګوند د خپل مقدس دین اسلام د پر مختګ او ټینګښت د پاره هلی ځلی کوی او د نورو دینی عقیدوته په درنه سترګه ګوری.
+#ژبه او کلتور د قام او وطن په ابادۍ کی مهم رول لوبوی لدی امله د پښتنو ټولنیز ولسولیز ګوند د خپلی ژبی او کلتور وده او پر مختګ خپله بنسټی دنده ګڼی او غواړی چې د هیواد ( سټیټ / دولت ) دری واړه قوی ( قانون جوړونکی ، اجرائیه او عدلیه ) د پښتونولئ په بنسټ ولاړوی او د پښتنو د جرګو پریکړې رسمی خوی پیدا کړی.
+#د تولید په وسایلود خصوصی ملکیت د ژغورلو او تقویه کولو حق لری تر هغو چې د عادلانه ټولنیز نظم مخه ونه نیسی.
 د اقصادی او خصوصی ملکیت داسی تقو یه کول پکار دی چې د یوی خوا د کار ځایونه پیدا شی او دبلی خوا وطن صنعتی وګرځی خو صنعت به په ټول وطن کی خوراو ور وی او مرکزی بڼه به نلری.
-
-۶ـ هر تن مجبور دی چې هیواد ( سټيټ / دولت ) ته د خپل عایدات په اندازه محصول ورکړی.
-
-۷ ـ کار د پښتونخوا د هر اوسیدونکی حق دی او هیواد ( سټیټ / دولت ) د خپل وس سره سم د کار پیدا کولو ذمه واری په غاړه لری. هغه چا ته چې کار نه پیدا کیږی او یا د کار کولو توان نلری د هیواد( سټيټ / دولت ) له خوا دومره مرسته ورسره کیږی چې ګذاره پری وکړی.
-
-۸ ـ د پښتنو ټولنیزولسولیز ګوند د انسانانو ژوند او انسانی درناوی ته تر هر څه زیات ارزښت ورکوی او غواړی چې ټول انسانان مساوی حق ولری او هیڅوک د مرګ په جزا محکوم نه شی او هم په غیر انسانی توګه جسمانی او ساوال ( نفسی / روحی ) ونه ځورول شی. 
-
-۹ ـ ټولنیز امن او د ژوندانه د هر ډول شرائطو ښه کول او په تیره بیا د انسانانو د لومړنیو اړتیاوو پوره کول د پښتنو د ټولنیزاولسولنیز ګوند غو ښتنه ده.
-
-۱۰ ـ پوهنه دپښتونخوا د هر اوسیدونکی بنیادی حق دی او په معیاری پښتو ژبه به وی. پوهنه با یده ده چې هر چا ته ددی امکان ورکړی چې خپل استعداد ته بی د کوم خنډ څخه وده ورکړی. په پوهنه کی ډیره پاملرنه مسلکی ښوونځیو او زده کړی ته پکار ده ځکه چې د یوی خوا د مسلکی زده کړی پواسطه وطن ابادیدلی شی او د بل خوا هر سړی په خپلو پښو ودریدلی شی.
+#هر تن مجبور دی چې هیواد ( سټيټ / دولت ) ته د خپل عایدات په اندازه محصول ورکړی.
+#کار د پښتونخوا د هر اوسیدونکی حق دی او هیواد ( سټیټ / دولت ) د خپل وس سره سم د کار پیدا کولو ذمه واری په غاړه لری. هغه چا ته چې کار نه پیدا کیږی او یا د کار کولو توان نلری د هیواد( سټيټ / دولت ) له خوا دومره مرسته ورسره کیږی چې ګذاره پری وکړی.
+# د پښتنو ټولنیزولسولیز ګوند د انسانانو ژوند او انسانی درناوی ته تر هر څه زیات ارزښت ورکوی او غواړی چې ټول انسانان مساوی حق ولری او هیڅوک د مرګ په جزا محکوم نه شی او هم په غیر انسانی توګه جسمانی او ساوال ( نفسی / روحی ) ونه ځورول شی. 
+#ټولنیز امن او د ژوندانه د هر ډول شرائطو ښه کول او په تیره بیا د انسانانو د لومړنیو اړتیاوو پوره کول د پښتنو د ټولنیزاولسولنیز ګوند غو ښتنه ده.
+# پوهنه دپښتونخوا د هر اوسیدونکی بنیادی حق دی او په معیاری پښتو ژبه به وی. پوهنه با یده ده چې هر چا ته ددی امکان ورکړی چې خپل استعداد ته بی د کوم خنډ څخه وده ورکړی. په پوهنه کی ډیره پاملرنه مسلکی ښوونځیو او زده کړی ته پکار ده ځکه چې د یوی خوا د مسلکی زده کړی پواسطه وطن ابادیدلی شی او د بل خوا هر سړی په خپلو پښو ودریدلی شی.
 دلسم (۱۰) ټولګی پوری زده کړه جبری ده او چاری ئی د مرکزی حکومت په غاړه دی. پوهنیزه څیړنه بایده ده چې د مرکز حکومت له خوا غښتلی شی. او نتیجی ئی د عوامو په خدمت او د ټولنی په وده کی راوستل شی.
-
-۱۱ـ د فکر، نظریو، مظاهرو، جلسو او اتساب ازادی بی د رنګ، نسل، ښځی او نر دا امتیاز څخه د پښتنی ټولنیزی ولسولۍ بنسټی غوښتنه ده.
-
-۱۲ـ خپرونی،مطبوعات، راډیو، تلویزون او فلمونه عامه دنده اجرا کوی. دوی بایده دی چې په ازادانه او ناپیلی توګه د پښتنی دود او دستور سره سم په هر ځای کی معلومات راغونډ او په خپل مسؤلیت ( زمه واری ) خپاره کاندی.
-
-۱۳ـ د ګوندونو او ټولنو د جوړولو او فعالیت ازادی د پښتنو ټولنیز ولسولیز ګوند غوښتنه او د هیواد ( سټیټ / دولت ) بنسټی دنده ده. خو رسمی ګوندونه هله ګڼل کیدلی شی چې د پښتونخوا د سیمه ایزی ( سوبائی / ایالتی ) یا ملی جرګی ( قومی جرګی ) په ټاکنه کی په سلو کی پنځه ( ۵ ) ووټونه ( رای ) ګټلی وی.
-
-۱۴ـ د پښتنو ټولنیز ولسولیز ګوند د خپلو غړو کسبی اونور وعلایقو ته ډیر ارزښت ورکوی لدی امله د خپل ګوند مختلفو ټولنو لکه د بزګرانو ( دهقانانو ) مزدورانو ، کارګرانو، ترکاڼانو، پښانو ( لوهارانو )، قصابانو،موچیانو، نایانو، دوبیانو ، کولالانو، طبیبانو، حقوق پوهانو، ښوونکو ، لیکوالو، پوهیدونکو، او نورو د جوړولو هڅه کوی او يوه د « ځوان پښتون » په نامه ټولنه ضروری ګڼی. ددی ټولنی غړی د کوند نیالګی دی چې په اتلس ( ۱۸ ) کلنۍ کی د ګوند غړیتوب تر لاسه کولی شی او د دیرش ( ۳۰ ) کلنۍ پوری د ټولنی او ګوند غړی پاتی کیدلی شی او د دیرش (۳۰ ) کلنۍ څخه ورسته بیا یوازی د ګوند غړی دی.
-
-۱۵ـ د خپل وطن پښتونخوا ازادی ، دفاع او ساتنه او د ډیرو ګوندونو د لاری د ولسولۍ ټینګونه د پښتنوټولنیزولسولیز ګوند غوښتنه او د پښتنو دنده ده . وسله وال پوځ او لښکر به خامخا د ملی جرګی د کنترول او د حکومت د لاس لاندی وی.
-
-۱۶ـ د پښتنوټولنیزولسولیز ګوند د نړۍ د ټولولنیزو ولسولیزو ګوندونو، ډلو، ټولنو، حکومتونو، او خلکو سره د نژدی اړیکو هڅه کوی.
-
-۱۷ـ د پښتنوټولنیزولسولیز ګوند د ملګروملتونو د موسسی ( اقوام متحده ) د منشور او دانسانی حقوقو د اعلامیی او د ټولو اولسونو د خود اردیت او خپلواکۍ د حق دفاع او ملا تړ کوی او استعمار په کلکه سره غندی.
-
-۱۸ـ د پښتنوټولنیزولسولیز ګوند د نورو ورونو قومونو سره د ازاد خود ارادیت دلاری د پښتونخوا اتحادی جمهوریت ( فدرالی جمهوریت ) جوړول غواړی.
+# د فکر، نظریو، مظاهرو، جلسو او اتساب ازادی بی د رنګ، نسل، ښځی او نر دا امتیاز څخه د پښتنی ټولنیزی ولسولۍ بنسټی غوښتنه ده.
+# خپرونی،مطبوعات، راډیو، تلویزون او فلمونه عامه دنده اجرا کوی. دوی بایده دی چې په ازادانه او ناپیلی توګه د پښتنی دود او دستور سره سم په هر ځای کی معلومات راغونډ او په خپل مسؤلیت ( زمه واری ) خپاره کاندی.
+# د ګوندونو او ټولنو د جوړولو او فعالیت ازادی د پښتنو ټولنیز ولسولیز ګوند غوښتنه او د هیواد ( سټیټ / دولت ) بنسټی دنده ده. خو رسمی ګوندونه هله ګڼل کیدلی شی چې د پښتونخوا د سیمه ایزی ( سوبائی / ایالتی ) یا ملی جرګی ( قومی جرګی ) په ټاکنه کی په سلو کی پنځه ( ۵ ) ووټونه ( رای ) ګټلی وی.
+# د پښتنو ټولنیز ولسولیز ګوند د خپلو غړو کسبی اونور وعلایقو ته ډیر ارزښت ورکوی لدی امله د خپل ګوند مختلفو ټولنو لکه د بزګرانو ( دهقانانو ) مزدورانو ، کارګرانو، ترکاڼانو، پښانو ( لوهارانو )، قصابانو،موچیانو، نایانو، دوبیانو ، کولالانو، طبیبانو، حقوق پوهانو، ښوونکو ، لیکوالو، پوهیدونکو، او نورو د جوړولو هڅه کوی او يوه د « ځوان پښتون » په نامه ټولنه ضروری ګڼی. ددی ټولنی غړی د کوند نیالګی دی چې په اتلس ( ۱۸ ) کلنۍ کی د ګوند غړیتوب تر لاسه کولی شی او د دیرش ( ۳۰ ) کلنۍ پوری د ټولنی او ګوند غړی پاتی کیدلی شی او د دیرش (۳۰ ) کلنۍ څخه ورسته بیا یوازی د ګوند غړی دی.
+# د خپل وطن پښتونخوا ازادی ، دفاع او ساتنه او د ډیرو ګوندونو د لاری د ولسولۍ ټینګونه د پښتنوټولنیزولسولیز ګوند غوښتنه او د پښتنو دنده ده . وسله وال پوځ او لښکر به خامخا د ملی جرګی د کنترول او د حکومت د لاس لاندی وی.
+#د پښتنوټولنیزولسولیز ګوند د نړۍ د ټولولنیزو ولسولیزو ګوندونو، ډلو، ټولنو، حکومتونو، او خلکو سره د نژدی اړیکو هڅه کوی.
+#د پښتنوټولنیزولسولیز ګوند د ملګروملتونو د موسسی ( اقوام متحده ) د منشور او دانسانی حقوقو د اعلامیی او د ټولو اولسونو د خود اردیت او خپلواکۍ د حق دفاع او ملا تړ کوی او استعمار په کلکه سره غندی.
+#د پښتنوټولنیزولسولیز ګوند د نورو ورونو قومونو سره د ازاد خود ارادیت دلاری د پښتونخوا اتحادی جمهوریت ( فدرالی جمهوریت ) جوړول غواړی.
 
 == ګوندی جوړښت ( تشکیلات / تنظیمی بڼه )  ==
 
