--- a/د_پښتنو_ټولنیز_ولسواک_گوند.mw
+++ b/د_پښتنو_ټولنیز_ولسواک_گوند.mw
@@ -5,7 +5,7 @@
 == بنسټی ارزښتونه ==
 #د پښتنو او د پښتنو د وطن پښتونخوا ویش سوله په خاطر کی اچولی ده. د سولی د ژوغورلو لپاره د ټولو پښتنو یووالی او د پښتنو د خپل خپلواک هیواد (سټیټ دولت ) پښتونخوا جوړونه د پښتنو د ټولنیز ولسولیز ګوند تر هر څه مهمه تر ټولو ستره دنده او بنسټی غوښتنه ده. 
 #د پښتونخوا د هیواد (سټیټ دولت ) واک به د اولس په لاس کی وی. ددی د پاره په کار دی چې د پښتونخوا د پښتنو د اولس ویش،جغرافیائی او اداری اسانتیاووله مخی په سیمو (سوبو / ایالتونو ) وویشل شی او هره سیمه بیا په لویو ولسوالیو ( ضلعو ) او ولسوالیو ( تحصیلونو ) ویشل شوی وی. هره سیمه ( سوبه / ایالت ) به ځانته سیمه ایزه جرګه (سوبائی / ایالتی جرګه ) او سربیره پر دی به د پښتونخوا یوه ملی جرګه (قومی جرګه ) او بله د مشرانو جرګه (سینټ ) وی. د سیمی ( سوبا ئی / ایالتی ) جر ګه به د خلپو غړو څخه د سیمی (سوبا ئی / ایالتی ) حکومتونه او ملی جرګه ( قومی جرګه ) به د خپلو غړو څخه مرکزی حکومت ټاکی.
-د مشرانو جرګه ( سینټ ) به د سیمو ( سوبو / ایالتونو ) د حکومتونو د مشرانو او د هری سیمی ( سوبی / ایالت ) د وګړو په حساب د سیده ټاکل شوو نماینده ګانو څخه جوړه شوی وی. د ملی (قومی ) اوسیمه ایزو ( سوبائی / ایالتی ) جرګو په پریکړو به غور کوی او جمهوریس به نوموی او د تا ئید لپاره به ئی لویه جرګه راغواړی د ملی ( قومی ) او سیمه ایزو ( سوبا ئی / ایالتی ) جرګو غړی په سلو کی اتیا ( ۸۰ ) د ولسوالیو ( تحصیلونو ) په حساب د ولسوالیو (تحصیلونو ) د وګړو له خوا په سیده توګه د ازادی ټاکنی د لاری او په سلو کی شل ( ۲۰ ) د هغه ګوند ونو د لاری چې په سلو کی ئی پنځه ( ۵ ) رائی ګټلی وی په غیری سیده توګه ټاکل کيږی.
+#د مشرانو جرګه ( سینټ ) به د سیمو ( سوبو / ایالتونو ) د حکومتونو د مشرانو او د هری سیمی ( سوبی / ایالت ) د وګړو په حساب د سیده ټاکل شوو نماینده ګانو څخه جوړه شوی وی. د ملی (قومی ) اوسیمه ایزو ( سوبائی / ایالتی ) جرګو په پریکړو به غور کوی او جمهوریس به نوموی او د تا ئید لپاره به ئی لویه جرګه راغواړی د ملی ( قومی ) او سیمه ایزو ( سوبا ئی / ایالتی ) جرګو غړی په سلو کی اتیا ( ۸۰ ) د ولسوالیو ( تحصیلونو ) په حساب د ولسوالیو (تحصیلونو ) د وګړو له خوا په سیده توګه د ازادی ټاکنی د لاری او په سلو کی شل ( ۲۰ ) د هغه ګوند ونو د لاری چې په سلو کی ئی پنځه ( ۵ ) رائی ګټلی وی په غیری سیده توګه ټاکل کيږی.
 د پښتونخوا هر اوسیدونکی چې عمر ئی د اتلس ( ۱۸ ) کلونو څخه کم نه وی د دوه ووټونو حق لری چې یو به ګوند او بل به کاندید ته ورکوی خو خپله دملی ( قومی ) او سیمه ایزو ( سوبائی / ایالتی ) جرګو لپاره هله خپل ځان کاندید ولی شی چې عمر ئی د دیرش ( ۳۰ ) کلونو څخه کم نه وی.
 #د پښتنو ټولنیز ولسولیز ګوند د خپل مقدس دین اسلام د پر مختګ او ټینګښت د پاره هلی ځلی کوی او د نورو دینی عقیدوته په درنه سترګه ګوری.
 #ژبه او کلتور د قام او وطن په ابادۍ کی مهم رول لوبوی لدی امله د پښتنو ټولنیز ولسولیز ګوند د خپلی ژبی او کلتور وده او پر مختګ خپله بنسټی دنده ګڼی او غواړی چې د هیواد ( سټیټ / دولت ) دری واړه قوی ( قانون جوړونکی ، اجرائیه او عدلیه ) د پښتونولئ په بنسټ ولاړوی او د پښتنو د جرګو پریکړې رسمی خوی پیدا کړی.
