--- a/د_پښتنو_ټولنیز_ولسواک_گوند.mw
+++ b/د_پښتنو_ټولنیز_ولسواک_گوند.mw
@@ -10,7 +10,7 @@
 #د پښتنو ټولنیز ولسولیز ګوند د خپل مقدس دین اسلام د پر مختګ او ټینګښت د پاره هلی ځلی کوی او د نورو دینی عقیدوته په درنه سترګه ګوری.
 #ژبه او کلتور د قام او وطن په ابادۍ کی مهم رول لوبوی لدی امله د پښتنو ټولنیز ولسولیز ګوند د خپلی ژبی او کلتور وده او پر مختګ خپله بنسټی دنده ګڼی او غواړی چې د هیواد ( سټیټ / دولت ) دری واړه قوی ( قانون جوړونکی ، اجرائیه او عدلیه ) د پښتونولئ په بنسټ ولاړوی او د پښتنو د جرګو پریکړې رسمی خوی پیدا کړی.
 #د تولید په وسایلود خصوصی ملکیت د ژغورلو او تقویه کولو حق لری تر هغو چې د عادلانه ټولنیز نظم مخه ونه نیسی.
-د اقصادی او خصوصی ملکیت داسی تقو یه کول پکار دی چې د یوی خوا د کار ځایونه پیدا شی او دبلی خوا وطن صنعتی وګرځی خو صنعت به په ټول وطن کی خوراو ور وی او مرکزی بڼه به نلری.
+#د اقصادی او خصوصی ملکیت داسی تقو یه کول پکار دی چې د یوی خوا د کار ځایونه پیدا شی او دبلی خوا وطن صنعتی وګرځی خو صنعت به په ټول وطن کی خوراو ور وی او مرکزی بڼه به نلری.
 #هر تن مجبور دی چې هیواد ( سټيټ / دولت ) ته د خپل عایدات په اندازه محصول ورکړی.
 #کار د پښتونخوا د هر اوسیدونکی حق دی او هیواد ( سټیټ / دولت ) د خپل وس سره سم د کار پیدا کولو ذمه واری په غاړه لری. هغه چا ته چې کار نه پیدا کیږی او یا د کار کولو توان نلری د هیواد( سټيټ / دولت ) له خوا دومره مرسته ورسره کیږی چې ګذاره پری وکړی.
 # د پښتنو ټولنیزولسولیز ګوند د انسانانو ژوند او انسانی درناوی ته تر هر څه زیات ارزښت ورکوی او غواړی چې ټول انسانان مساوی حق ولری او هیڅوک د مرګ په جزا محکوم نه شی او هم په غیر انسانی توګه جسمانی او ساوال ( نفسی / روحی ) ونه ځورول شی. 
