--- a/د_پښتنو_ټولنیز_ولسواک_گوند.mw
+++ b/د_پښتنو_ټولنیز_ولسواک_گوند.mw
@@ -16,7 +16,7 @@
 # د پښتنو ټولنیزولسولیز ګوند د انسانانو ژوند او انسانی درناوی ته تر هر څه زیات ارزښت ورکوی او غواړی چې ټول انسانان مساوی حق ولری او هیڅوک د مرګ په جزا محکوم نه شی او هم په غیر انسانی توګه جسمانی او ساوال ( نفسی / روحی ) ونه ځورول شی. 
 #ټولنیز امن او د ژوندانه د هر ډول شرائطو ښه کول او په تیره بیا د انسانانو د لومړنیو اړتیاوو پوره کول د پښتنو د ټولنیزاولسولنیز ګوند غو ښتنه ده.
 # پوهنه دپښتونخوا د هر اوسیدونکی بنیادی حق دی او په معیاری پښتو ژبه به وی. پوهنه با یده ده چې هر چا ته ددی امکان ورکړی چې خپل استعداد ته بی د کوم خنډ څخه وده ورکړی. په پوهنه کی ډیره پاملرنه مسلکی ښوونځیو او زده کړی ته پکار ده ځکه چې د یوی خوا د مسلکی زده کړی پواسطه وطن ابادیدلی شی او د بل خوا هر سړی په خپلو پښو ودریدلی شی.
-دلسم (۱۰) ټولګی پوری زده کړه جبری ده او چاری ئی د مرکزی حکومت په غاړه دی. پوهنیزه څیړنه بایده ده چې د مرکز حکومت له خوا غښتلی شی. او نتیجی ئی د عوامو په خدمت او د ټولنی په وده کی راوستل شی.
+#دلسم (۱۰) ټولګی پوری زده کړه جبری ده او چاری ئی د مرکزی حکومت په غاړه دی. پوهنیزه څیړنه بایده ده چې د مرکز حکومت له خوا غښتلی شی. او نتیجی ئی د عوامو په خدمت او د ټولنی په وده کی راوستل شی.
 # د فکر، نظریو، مظاهرو، جلسو او اتساب ازادی بی د رنګ، نسل، ښځی او نر دا امتیاز څخه د پښتنی ټولنیزی ولسولۍ بنسټی غوښتنه ده.
 # خپرونی،مطبوعات، راډیو، تلویزون او فلمونه عامه دنده اجرا کوی. دوی بایده دی چې په ازادانه او ناپیلی توګه د پښتنی دود او دستور سره سم په هر ځای کی معلومات راغونډ او په خپل مسؤلیت ( زمه واری ) خپاره کاندی.
 # د ګوندونو او ټولنو د جوړولو او فعالیت ازادی د پښتنو ټولنیز ولسولیز ګوند غوښتنه او د هیواد ( سټیټ / دولت ) بنسټی دنده ده. خو رسمی ګوندونه هله ګڼل کیدلی شی چې د پښتونخوا د سیمه ایزی ( سوبائی / ایالتی ) یا ملی جرګی ( قومی جرګی ) په ټاکنه کی په سلو کی پنځه ( ۵ ) ووټونه ( رای ) ګټلی وی.
