*Empty MediaWiki Message*

--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -18,7 +18,7 @@
 == مخينه ==
 هغه د شهيد عبدالقادرخان زوي په ۱۳۲۷ هجري لمريز كال د كندوز ولايت د حضرت امام صېب ولسوالۍ د ورته بز په كلي كې زېږېدلې دى. نوموړی د څو لسيزو نه راپدېخوا د افغانستان په سياسي چارو کې راښکېل دی. خو تر ټولو ډېر هغه وخت مشهور شو کله چې روسانو پر [[افغانستان]] باندې يرغل وکړ او دی د سرولښکرو پر وړاندې د جهاد تکل وکړ. ددې سره سره دی د افغانستان پخوانی لومړی وزير هم پاتې شوی.
 
-د حكمتيار كورنۍ د نائب الحكومه شېر خان په وخت كې له غزني څخه كندز ته كډه او په امام صېب كې مېشته شوه. پلار يې د غزني د شاه جوى او مور بي بي يې د قره باغ اوسېدونكې ول. څلور وروڼه او درې خوېندې لري، چې وروڼه يې په دې ډول دي:
+د حكمتيار كورنۍ د نائب الحكومه شېر خان په وخت كې له غزني څخه كندز ته كډه او په امام صېب كې مېشته شوه. پلار يې د غزني د شاه جوى او مور بي بي يې د قره باغ اوسېدونكې ول. څلور وروڼه او درې خوېندې لري، چې د وروڼو نومونه يۍ دا دي:
 
 ۱- اخترمحمد (مشر)
 
