--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -28,7 +28,7 @@
 
 ۴- نظام الدين
 
-پلار او دوه وروڼه يې (اختر محمد او نورالدين) د كمونستانو په لاس په زندان كې په شهادت ورسول شول. د شهادت څرنګوالې او د خښولو ځاى يې نامالوم دى، خو د يوه سرتيري د خولې نكل دى چې: شهيد عبدالقادر خان يې له زندان څخه  بهر ووېستو او د آودان دښتې ته يې يووړ. هورې يې په پوځي جيپ پورې وتاړه، او جيپ يې ترهغې ځغلاته ترڅو يې هغه په بې رحمۍ سره په شهادت ورساوه.
+پلار او دوه وروڼه يې (اختر محمد او نورالدين) د كمونستانو په لاس په زندان كې په شهادت ورسول شول. د شهادت څرنګوالې او د خښولو ځاى يې نامالوم دى، خو د يوه سرتيري د خولې نكل دى چې: شهيد عبدالقادر خان يې له زندان څخه  بهر ووېستو او د آودان دښتې ته يې يووړ. هورې يې په پوځي جيپ پورې وتاړه، او جيپ يې ترهغې ځغلاوه ترڅو چې يې هغه په بې رحمۍ سره په شهادت ورساوه.
 حكمتيار تر پېنځم ټولګي پورې د امام صېب په منځني ښوونځي كې زده كړې وكړې. له پينځم ټولګي څخه وروسته د حربي ښوونځي لپاره غوره شو. شپږمن، اووم او اتم ټولګي يې په نوموړي ښوونځي كې ولوستل او د نهم ټولګي لپاره د شېرخان لېسې ته ولاړ. د ښوونځي د دزه كړې ترڅنګ يې لومړنۍ زده كړې له ارواښاد مولوي قربان محمد څخه وكړې، چې د چاه آب نوموړې عالم ؤ. نوموړي عالم چې د افغانستان له لرغوني او وخت له تاريخ څخه خبر سړې ؤ د حكمتيار په فكري او سياسي روزنه كې پوره ونډه لرله.
 
 == زده کړې ==
