--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -186,7 +186,7 @@
 
 * [http://tanweer.blogfa.com د تنویر په نامه بلاګ]
 
-* [http://ketab-khana.blogfa.com د تنویر کتابټون] د ورو حکمتیار ډیری کتابونه لدې کتابتون څخه ترلاسه کولای شﺉ.
+* [http://ketab-khana.blogfa.com د تنویر کتابټون] - د حکمتیار ډیری کتابونه لدې کتابتون څخه ترلاسه کولای شی.
 
 == '''اخځليكونه''' ==
 **[[اسلامي غورځنګ]]، لیکوال: انجنییر ګلبدالدین حکمتیار
