*Empty MediaWiki Message*

--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -76,7 +76,7 @@
 
 ۸- حكمتيار
 
-له دې ډلې څخه ټول په شهادت رسېدلي، يواځې حكمتيار ژوندې پاتې دى.
+له دې ډلې څخه ټول په شهادت رسېدلي، يواځې حكمتيار ژوندى پاتې دى.
 په غونډه كې له اوږدو خبرو اترو دا فېصله وشوه چې منظم كار روانوو، ځوانان اسلام ته رابولو، ولس راويښوو، د كمونستانو مقابله كوو، د دوي لخوا چې زموږ هېواد ته كوم جدي ګواښ پېښ دى، او د دوي سياسي هلوځلو په ماهيت خلك خبر كړو. فېصله وشوه چې دا د يوې داسې شبنامې په واسطه وشي.
 
 ==ادبي ژوند==
