--- a/گلبدين_نايب.mw
+++ b/گلبدين_نايب.mw
@@ -1,4 +1,4 @@
-گلبدين نايب د كركټ ملي لوبډلې الراونډر دى ، دى تيز بالينگ کوي او تيزې منډې جوړوي ، دۀ له بهاما ټاپوگانو سره پنځه لوبغاړي وسوځول چې يو هم پکې هيټريک و چې په پرله پسې درو توپونو يې لوبغاړي پکې و سوځول . 
+گلبدين نايب د افغانستان د كركټ ملي لوبډلې الراونډر دى ، دى تيز بالينگ کوي او تيزې منډې جوړوي ، دۀ له بهاما ټاپوگانو سره پنځه لوبغاړي وسوځول چې يو هم پکې هيټريک و چې په پرله پسې درو توپونو يې لوبغاړي پکې و سوځول . 
 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
