*Empty MediaWiki Message*

--- a/پياز.mw
+++ b/پياز.mw
@@ -12,6 +12,6 @@
 
 ۱ .  پ . ا . كوسېف ، د روغتيا بښونكو بوټو بشپړ لارښود ، ۲۰۰۱ ز كال ماسكو چاپ ، ۶۵ مخ .
 
-۲ . يوليا ساوېلووا ، هوږه او پياز ، ۲۰۰۶ ز كال ماسكو چاپ ، ۵ او ۶ مخونه . 
+۲ . يوليا ساوېلووا ، په هوږې او پيازو ، ۲۰۰۶ ز كال ماسكو چاپ ، ۵ او ۶ مخونه . 
 
 يادښت : د پښتو ژبې برېښنايي پوهنغونډ ( ويكيپېډيا ) درنو كاروونكو ، هيله ده ددغې ژباړې پر ليكه كولو كې راسره مرسته وكړئ . څښتن تعالى مو ښېرازه لره !
