--- a/پياز.mw
+++ b/پياز.mw
@@ -4,7 +4,7 @@
 
 د پيازو لومړنى ټاټوبى افغانستان او ايران دى او وروسته ورو ورو له دغو سيمو نه نږدې هېوادو لكه هند ، چين او بيا تر يونانه پورې خپور شوى دى . داسې ويل كيږي چې په لرغونو زمانو كې د پيازو غوټې د يوه ښه دارو درمل په توګه پلورل كېدې او يا هم د خلكو ترمنځ په نورو توكو تبادله كېدې .
 
-اوسمهال پياز نږدې په ټوله نړۍ كې كرل كيږي . د پيازو په تركيب كې ځينې نايټروجني مواد او ځينې قندونه ، چې له هغه شمېر نه ګلوكوز ، فروكتوز ، ساكاروز او مالتوز دي ، شتون لري . سربېره پر دې په هغه كې كلسيم ، وسپنه ، او فاسفورس ( فاسفور ) هم شته چې د انسان د بدن لپاره ډېر ګټور دي . د ساري په توګه د پيازو په ځينو ډولونو كې وسپنه ډېره ده چې د انسان د وينې تركيب ښه كوي او كلسيم يې د هډوكو په كلكولو كې مرسته كوي . همدا راز د پيازو په تركيب كې د ايتر ( اثير ) غوړي ، البومين ، د C ويټامين او مايې هم شته . دغه ډېر خوندور او ګټور بوټى د ګېډې او كولمو په كار او فعاليت كې مرسته كوي . پر نورو ډېرو روغتيايې ځانګړنو سربېره د پيازو دا ميكروبي ضد ځانګړنه خو كورټ هر سړي ته مالومه ده چې د والګي په درملنه كې خورا اغېزمن دى .
+اوسمهال پياز نږدې په ټوله نړۍ كې كرل كيږي . د پيازو په تركيب كې ځينې نايټروجني مواد او ځينې قندونه ، چې له هغه شمېر نه ګلوكوز ، فروكتوز ، ساكاروز او مالتوز دي ، شتون لري . سربېره پر دې په هغه كې كلسيم ، وسپنه ، او فاسفورس ( فاسفور ) هم شته چې د انسان د بدن لپاره ډېر ګټور دي . د ساري په توګه د پيازو په ځينو ډولونو كې وسپنه ډېره ده چې د انسان د وينې تركيب ښه كوي او كلسيم يې د هډوكو په كلكولو كې مرسته كوي . همدا راز د پيازو په تركيب كې د ايتر ( اثير ) غوړي ، البومين ، د C ويټامين او مايې هم شته . دغه ډېر خوندور او ګټور بوټى د ګېډې او كولمو په كار او فعاليت كې مرسته كوي . پر نورو ډېرو روغتيايې ځانګړنو سربېره د پيازو دا ميكروبي ضد ځانګړنه خو نږدې  هر سړي ته مالومه ده چې د والګي په درملنه كې خورا اغېزمن دى .
 
 ژباړن : محمد طاهر كاڼى
 
