--- a/عبدالروف_بېنوا.mw
+++ b/عبدالروف_بېنوا.mw
@@ -197,3 +197,6 @@ ROW # 7       /    GRAVE # 5
 
 [[وېشنيزه: پښتانه شاعران]]
 [[وېشنيزه: پښتانه ليکوال]]
+[[وېشنيزه: افغاني ليکوال]]
+[[وېشنيزه: پښتانه]]
+[[وېشنيزه: افغانان]]
