*Empty MediaWiki Message*

--- a/پياز.mw
+++ b/پياز.mw
@@ -8,8 +8,8 @@
 
 ژباړن : محمد طاهر كاڼى
 
-سرچينې :
 
+== سرچينې ==
 ۱ .  پ . ا . كوسېف ، د روغتيا بښونكو بوټو بشپړ لارښود ، ۲۰۰۱ ز كال ماسكو چاپ ، ۶۵ مخ .
 
 ۲ . يوليا ساوېلووا ، هوږه او پياز ، ۲۰۰۶ ز كال ماسكو چاپ ، ۵ او ۶ مخونه . 
@@ -18,4 +18,72 @@
 
 
 
+
+[[ar:بصل]]
+[[gn:Sevói]]
+[[ay:Siwilla]]
+[[zh-min-nan:Chhang-thâu]]
+[[be-x-old:Цыбуля рэпчатая]]
+[[bg:Кромид лук]]
+[[ca:Ceba]]
+[[cs:Cibule kuchyňská]]
+[[da:Løg]]
+[[pdc:Zwiwwel]]
+[[de:Zwiebel]]
+[[et:Sibul]]
+[[el:Κρεμμύδι]]
 [[en:onion]]
+[[es:Allium cepa]]
+[[eo:Cepo]]
+[[eu:Tipula]]
+[[fa:پیاز]]
+[[fr:Oignon]]
+[[fur:Civole]]
+[[gd:Uinnean]]
+[[gl:Cebola]]
+[[ko:양파]]
+[[hi:प्याज़]]
+[[hsb:Cybličkowacy kobołk]]
+[[id:Bawang Bombay]]
+[[xh:Itswele]]
+[[it:Allium cepa]]
+[[he:בצל הגינה]]
+[[ht:Zonyon]]
+[[ku:Pîvaz]]
+[[la:Cepa]]
+[[lt:Valgomasis svogūnas]]
+[[hu:Vöröshagyma]]
+[[mk:Кромид]]
+[[ml:ഉള്ളി]]
+[[mr:कांदा]]
+[[ms:Bawang]]
+[[nl:Ui (plant)]]
+[[nds-nl:Uui]]
+[[ja:タマネギ]]
+[[no:Vanlig løk]]
+[[nn:Lauk]]
+[[oc:Ceba]]
+[[pl:Cebula zwyczajna]]
+[[pt:Cebola]]
+[[ksh:Öllisch]]
+[[ro:Ceapă]]
+[[qu:Siwilla]]
+[[ru:Лук репчатый]]
+[[sq:Qepa]]
+[[simple:Onion]]
+[[sk:Cesnak cibuľový]]
+[[sl:Čebula]]
+[[szl:Cwibla]]
+[[sr:Црни лук]]
+[[fi:Keltasipuli]]
+[[sv:Lök (art)]]
+[[tl:Sibuyas]]
+[[te:ఉల్లిపాయ]]
+[[th:หอมใหญ่]]
+[[vi:Hành tây]]
+[[to:Onioni]]
+[[tr:Soğan]]
+[[uk:Цибуля ріпчаста]]
+[[vls:Andjoen]]
+[[yi:צוויבל]]
+[[zh:洋蔥]]
