--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -43,19 +43,16 @@ Ibn Arabi’s life can be divided into three discrete phases: born in Medinat Mu
 دا كتاب د تصوف په علم كې لوړ مقام لري. 
 ابن عربي شاعر هم ؤ، دده د عارفانه نظمونو ټولګه د ترجمان الشواق په نامه خپره شوې ده، چې ددې كتاب انګرېزي ژباړه د ډاكټر نكلسن كړې ده.
 
-== مهم ليكنې ==
-
-*فصوص الحِکم 
-*فتوحات مكيه 
-*عنقاء مغرب في معرفه ختم الاولياء وشمس المغرب 
-*العقد المنظوم والسر المختوم 
-*محاضرة الابرار ومسامرة الاخيار 
-*مشاهد الاسرار القدسيه ومطالع الانوار الالهيه 
-*ترجمان الاشواق (عارفانه كلام ابن عربي) 
-*تنزل الاملاك في حركات الافلاك
-
-
-
+== ليکلي آثار ==
+=== اهمې ليکنې ===
+#فصوص الحِکم 
+#فتوحات مكيه 
+#عنقاء مغرب في معرفه ختم الاولياء وشمس المغرب 
+#العقد المنظوم والسر المختوم 
+#محاضرة الابرار ومسامرة الاخيار 
+#مشاهد الاسرار القدسيه ومطالع الانوار الالهيه 
+#ترجمان الاشواق (عارفانه كلام ابن عربي) 
+#تنزل الاملاك في حركات الافلاك
 
 == د ابن عربي كتابونه ==
 **فصوص الحكم 
