--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -46,13 +46,17 @@ Ibn Arabi’s life can be divided into three discrete phases: born in Medinat Mu
 == ليکلي آثار ==
 === اهمې ليکنې ===
 #فصوص الحِکم 
-#فتوحات مكيه 
+#فتوحات مكيه في معرفة أسرار المالكية والملكية
 #عنقاء مغرب في معرفه ختم الاولياء وشمس المغرب 
 #العقد المنظوم والسر المختوم 
 #محاضرة الابرار ومسامرة الاخيار 
 #مشاهد الاسرار القدسيه ومطالع الانوار الالهيه 
-#ترجمان الاشواق (عارفانه كلام ابن عربي) 
+#ترجمان الاشواق في غزل والنسيب (عارفانه كلام ابن عربي) 
 #تنزل الاملاك في حركات الافلاك
+#كتاب العقائد 
+#جامع الاحكام في معرفة الحلال والحرام 
+#الدرة الباضعة من الجفر الجامعة 
+#كتاب مواقع النجوم ومطالع أهلة الأسرار والعلوم
 
 == د ابن عربي كتابونه ==
 **فصوص الحكم 
