/* د ابن عربي كتابګوټي */

--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -58,7 +58,7 @@ Ibn Arabi’s life can be divided into three discrete phases: born in Medinat Mu
 #الدرة الباضعة من الجفر الجامعة 
 #كتاب مواقع النجوم ومطالع أهلة الأسرار والعلوم
 
-== د ابن عربي كتابګوټي ==
+=== رسالې ===
 ابن عربي ګڼ شمېر رسالې ليکلي چې په دې توګه دي:
 
 #شجرة الكون 
@@ -70,47 +70,47 @@ Ibn Arabi’s life can be divided into three discrete phases: born in Medinat Mu
 #حليۃ الابدال 
 #نقش الفصوص 
 #رسالۃ الفناء في المشاهده 
-**الاسرا إلى المقام الاسرى 
-**مشكاة العقول المقتبسة من نور المنقول 
-**حرف الكلمات وحرف 
-**رسالة الأزل 
-**رسالة الأنوار 
-*رسالة الحجب 
-*رسالة روح القدس 
-*الرسالة الغوثية 
-*الرسالة القدسية 
-**رسالة القسم الإلهي 
-**رسالة كنه مما لا بد منه 
-**رسالة الميم والواو والنون 
-**كتاب الياء وهو كتاب الهو الخ 
-**رسالة انشاء الدوائر 
-**رسالة الأنوار فيما يفتح على صاحب الخلوة من الاسرار 
-**قصيدة عظيمة للشيخ محي الدين بن عربي 
-**حلية الأبدال 
-**رسالة الحجب 
-**السبحة السوداء 
-**شجون المسجون 
-*الأمر المحكم المربوط فيما يلزم أهل طريق الله تعالى من الشروط 
-**كتاب الفناء في المشاهدة 
-**كتاب بلغة الغواص في الأكوان إلى معدن الإخلاص (تحت الطبع) 
-**كتاب الجلال والجمال 
-**كتاب الألف و هو كتاب الأحدية 
-**كتاب الجلالة و هو كلمة الله 
-**كتاب القربة 
-**كتاب الشأن 
-**كتاب الشاهد 
-**كتاب التراجم 
-**كتاب منزل القطب و مقامه و حاله 
-**رسالة الانتصار 
-**كتاب الكتب 
-**كتاب المسائل 
-**كتاب التجليات 
-**كتاب الإسفار عن نتائج الأسفار 
-**كتاب الوصايا 
-**كتاب نقش الفصوص 
-**كتاب الوصية 
-**كتاب اصطلاح الصوفية 
-**رساله الي امام الرازي
+#الاسرا إلى المقام الاسرى 
+#مشكاة العقول المقتبسة من نور المنقول 
+#حرف الكلمات وحرف 
+#رسالة الأزل 
+#رسالة الأنوار 
+#رسالة الحجب 
+#رسالة روح القدس 
+#الرسالة الغوثية 
+#الرسالة القدسية 
+#رسالة القسم الإلهي 
+#رسالة كنه مما لا بد منه 
+#رسالة الميم والواو والنون 
+#كتاب الياء وهو كتاب الهو الخ 
+#رسالة انشاء الدوائر 
+#رسالة الأنوار فيما يفتح على صاحب الخلوة من الاسرار 
+#قصيدة عظيمة للشيخ محي الدين بن عربي 
+#حلية الأبدال 
+#رسالة الحجب 
+#السبحة السوداء 
+#شجون المسجون 
+#الأمر المحكم المربوط فيما يلزم أهل طريق الله تعالى من الشروط 
+#كتاب الفناء في المشاهدة 
+#كتاب بلغة الغواص في الأكوان إلى معدن الإخلاص (تحت الطبع) 
+#كتاب الجلال والجمال 
+#كتاب الألف و هو كتاب الأحدية 
+#كتاب الجلالة و هو كلمة الله 
+#كتاب القربة 
+#كتاب الشأن 
+#كتاب الشاهد 
+#كتاب التراجم 
+#كتاب منزل القطب و مقامه و حاله 
+#رسالة الانتصار 
+#كتاب الكتب 
+#كتاب المسائل 
+#كتاب التجليات 
+#كتاب الإسفار عن نتائج الأسفار 
+#كتاب الوصايا 
+#كتاب نقش الفصوص 
+#كتاب الوصية 
+#كتاب اصطلاح الصوفية 
+#رساله الي امام الرازي
 
 == مسلمان فلسفيان ==
 **[[يعقوب الكندي]]
