--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -112,7 +112,7 @@ Ibn Arabi’s life can be divided into three discrete phases: born in Medinat Mu
 #كتاب اصطلاح الصوفية 
 #رساله الي امام الرازي
 
-== مسلمان فلسفيان ==
+== دا هم وګورۍ ==
 **[[يعقوب الكندي]]
 **[[ابن رشد]]
 **[[ابي نصر الفارابي]]
