*Empty MediaWiki Message*

--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -30,6 +30,7 @@
 چې په غربي نړۍ کې د ''ډوکټور ماکزيموس'' په نامه يادېږي او په اسلامي نړۍ کې د '''محيي الدين''' "Revivifier of religion" او ''الشيخ الأكبر'' ("لوی استاد") په لقبونو هم ياد شوی.
 
 ==ژوندليک==
+{{ژباړل}}
 ابن عربي ته اکثراً د يو مرموز فيلسوف په سترګه کتل کېږي. د هغه د ژوند په مهال هغه ته په سوفيت کې يو ډېر اهم او لوړ سوفي ښوونکی او لارښود ګڼل کېده. <br />
 A vastly prolific writer, Ibn Arabi is generally known as the prime exponent of the idea that would later be termed ''[[Wahdat-ul-Wujood|wahdat al-wujud]]'' (وحدة الوجود, "unity of being"), though he has never used this term in any of his writings. His emphasis, as with any mystic, lay rather on the true potential of the human being and the path to realising that potential, which reaches its completion in the Perfect or Complete Man ([[al-insan al-kamil]]). Ibn Arabi wrote at least 300 works, ranging from minor treatises to the huge 37-volume Meccan Revelations ([[al-Futuhat al-Makkiyya]]) and the quintessence of his teachings, The Seals of Wisdom ([[Fusus al-hikam]]). Approximately 110 works are known to have survived in verifiable manuscripts, some 18 in Ibn Arabi’s own hand. He exerted an unparalleled influence, not only upon his immediate circle of friends and disciples, many of whom were considered spiritual masters in their own right, but also on succeeding generations, affecting the whole course of subsequent spiritual thought and practice in the Arabic, Turkish and Persian-speaking worlds. In recent years his writings have also become increasingly the subject of interest and study in the West, leading to the establishment of an international academic Society in his name.
 
