--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -197,17 +197,17 @@ In Urdu, the most authentic translation is supposed to be that of [[Maulvi Abdul
 |-
 |}
 
-[[Category: صوفيان]]
-[[Category:عرب فيلسوفان]]
-[[category: مسلمان فیلسوفان]]
-[[Category:Moorish writers]]
-[[Category:Astrologers]]
-[[Category:Murcian people|Arabi]]
-[[Category:اندولسي پوهان]]
+[[وېشنيزه: صوفيان]]
+[[وېشنيزه:عرب فيلسوفان]]
+[[وېشنيزه: مسلمان فیلسوفان]]
+[[وېشنيزه:Moorish writers]]
+[[وېشنيزه:ستورپوهان]]
+[[وېشنيزه:Murcian people|Arabi]]
+[[وېشنيزه:اندولسي پوهان]]
 
 {{Link FA|ar}}
 
-{{Sufism}}
+{{تصوف}}
 
 [[ar:محي الدين بن عربي]]
 [[de:Ibn Arabi]]
