*Empty MediaWiki Message*

--- a/ابن_عربي.mw
+++ b/ابن_عربي.mw
@@ -6,7 +6,7 @@
  color = #cef2e0 |       
 
  <!-- انځورونه -->   
- image_name = Ibnarabi.jpg|          
+ image_name = Ibn arabi.png|          
  image_caption = |       
  signature = |   
  
