*Empty MediaWiki Message*

--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -8,6 +8,8 @@
 * رېټېنول، دا د وېټامين اې هغه بڼه ده چې د حېواني خواړو د سرچينې نه راجذبېږي، دا يو زېړ رنګه، په غوړو کې حل کېدونکی وېټامين دی چې د سترګو په ليد کې او د هډوکو په وده کې ډېرې اهمه دنده لري. دا چې د دغې ډلې الکولي بڼه ناثابته ده نو په همدې خاطر اکثراً همدا وېټامين د ريټانيل اسېټېټ يا پالمټېټ په بڼه کې توليدېږي او د کارولو وړ ګرځي.
 
 * نور رېټنايډونه د يو ډول کيميايي تړنګونو د ټولګي نه دي چې په کيميايي توګه ويټامين اې سره اړيکې لري او دا مرکبونه په طبابت کې کارېږي.<ref> [http://www.cancer.org/docroot/CRI/content/CRI_2_4_4x_Retinoid_Therapy.asp?sitearea= American Cancer Society: Retinoid Therapy]</ref>
+==د ويټامين اې اېجاد==
+ويټامين اې په ۱۹۰۶ ز کال کې د يوې څېړنې په پايله کې وپېژندل شو، او دا په ډاګه شوه چې د کاربوهايډرېټو، پروټينو او شهمياتو تر څنګ داسې نور عاملين هم شته چې د څارويو په روغتيا کې اهم رول لري.<ref name="Discovery"> {{cite journal|title=Discovery of Vitamin A|journal=Encyclopedia of Life Sciences|date=2001-04-19|first=George|last=Wolf|coauthors=|volume=|issue=|pages=|doi= 10.1038/npg.els.0003419|url=http://www.mrw.interscience.wiley.com/emrw/9780470015902/els/article/a0003419/current/html|format=|accessdate=2007-07-21}}</ref> په ۱۹۱۷ ز. کال کې اېلمر مککولم په وېسکونسين ماډېسون پوهنتون کې وېټامين اې کشف کړ او بيا لافايټ مېنډېل او توماس اوسبورن په دويم ځل د يېل په پوهنتون کې همدا وېټامين وپېژانده. دا چې په هغه وخت کې په اوبو کې حل کېدونکی عامل بي (وېټامين بي) نوی پېژندل شوی ؤ، نو په لومړي سر کې څېړونکو هم همدا وېټامين په شهمياتو کې حل کېدونکي عامل اې (ويټامين اې) په نامه ونوماوه..<ref name="Discovery" /> په ۱۹۴۷ ز. کال کې د لومړي ځل لپاره، وېټامين اې په آزمېنتون کې د يوه هالنډي کيمياګرو، ډاوېډ ادريان وان دورپ او يوزف فېردېناند آرېنس لخوا جوړ شو.
 
 
 
