--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -11,12 +11,32 @@
 ==د ويټامين اې اېجاد==
 ويټامين اې په ۱۹۰۶ ز کال کې د يوې څېړنې په پايله کې وپېژندل شو، او دا په ډاګه شوه چې د کاربوهايډرېټو، پروټينو او شهمياتو تر څنګ داسې نور عاملين هم شته چې د څارويو په روغتيا کې اهم رول لري.<ref name="Discovery"> {{cite journal|title=Discovery of Vitamin A|journal=Encyclopedia of Life Sciences|date=2001-04-19|first=George|last=Wolf|coauthors=|volume=|issue=|pages=|doi= 10.1038/npg.els.0003419|url=http://www.mrw.interscience.wiley.com/emrw/9780470015902/els/article/a0003419/current/html|format=|accessdate=2007-07-21}}</ref> په ۱۹۱۷ ز. کال کې اېلمر مککولم په وېسکونسين ماډېسون پوهنتون کې وېټامين اې کشف کړ او بيا لافايټ مېنډېل او توماس اوسبورن په دويم ځل د يېل په پوهنتون کې همدا وېټامين وپېژانده. دا چې په هغه وخت کې په اوبو کې حل کېدونکی عامل بي (وېټامين بي) نوی پېژندل شوی ؤ، نو په لومړي سر کې څېړونکو هم همدا وېټامين په شهمياتو کې حل کېدونکي عامل اې (ويټامين اې) په نامه ونوماوه..<ref name="Discovery" /> په ۱۹۴۷ ز. کال کې د لومړي ځل لپاره، وېټامين اې په آزمېنتون کې د يوه هالنډي کيمياګرو، ډاوېډ ادريان وان دورپ او يوزف فېردېناند آرېنس لخوا جوړ شو.
 
+==د ويټامين اې سرچينه==
+ويټامين اې په طبيعي ډول په ګڼ شمېر خوړو کې موندل کېږي:
+<div style="-moz-column-count:2; column-count:2;">
+*'''[[ځيګر]] (د غوايي غوښته، د چرګ غوښه، د شونډکيز چرګ غوښه، د کب غوښه)''' (6500 μg  	722%)
+*'''[[ګازرې]]''' (835 μg 93%)
+*'''[[براکولي|د براکولي پاڼې]]''' (800 μg 89%) - Acc. to [http://www.nal.usda.gov/fnic/foodcomp/search/ USDA database]. Broccoli florets supposedly have much less - see note<ref>The RAE value in the USDA data for broccoli leaves is similar to the IU value for broccoli florets, which implies rather improbably that the leaves have about 20 times as much beta-carotene. It is possible that there was an error in the table.<!--This is not "original research"! I could just put a {{verify credibility}} tag on this, but I thought it would be better to specify why it seems incredible. If you think the value of 800 μg is good, let's discuss it on the talk page. --></ref>.
+*'''[[خواږه کچالو]]''' (709 μg 79%)
+*'''[[kale]]''' (681 μg 76%)
+*'''[[کوچ]]''' (684 μg 76%)
+*'''[[پالک]]''' (469 μg 52%)
+*[[سابه]]
+*'''[[کدو]]''' (369 μg 41%)
+*'''[[collard greens]]''' (333 μg 37%)
+*'''[[cantaloupe melon]]''' (169 μg 19%)
+*[[هګۍ (خواړه)|هګۍ]] (140 μg 16%)
+*[[خُرماڼۍ]] (96 μg 11%)
+*[[پپايا]] (55 μg 6%)
+*[[آم]] (38 μg 4%)
+*[[نخود]] (38 μg 4%)
+*[[براکولي]] (31 μg 3%)
+*[[winter squash]]
+</div>
 
+Note: bracketed values are retinol equivalences and percentage of the adult male [[Recommended Dietary Allowance|RDA]] per 100g.
 
-
-
-
-
+Conversion of carotene to retinol varies from person to person and bioavailability of carotene in food varies.<ref>{{cite journal |author=Borel P, Drai J, Faure H, ''et al'' |title=[Recent knowledge about intestinal absorption and cleavage of carotenoids] |language=French |journal=Ann. Biol. Clin. (Paris) |volume=63 |issue=2 |pages=165–77 |year=2005 |pmid=15771974 |doi=}}</ref><ref>{{cite journal |author=Tang G, Qin J, Dolnikowski GG, Russell RM, Grusak MA |title=Spinach or carrots can supply significant amounts of vitamin A as assessed by feeding with intrinsically deuterated vegetables |journal=Am. J. Clin. Nutr. |volume=82 |issue=4 |pages=821–8 |year=2005 |pmid=16210712 |doi=}}</ref>
 
 == سرچينې ==
 {{Reflist}}
