--- a/ويټامين_اې.mw
+++ b/ويټامين_اې.mw
@@ -13,10 +13,9 @@
 
 ==د ويټامين اې سرچينه==
 ويټامين اې په طبيعي ډول په ګڼ شمېر خوړو کې موندل کېږي:
-<div style="-moz-column-count:2; column-count:2;">
 *'''[[ځيګر]] (د غوايي غوښته، د چرګ غوښه، د شونډکيز چرګ غوښه، د کب غوښه)''' (6500 μg  	722%)
 *'''[[ګازرې]]''' (835 μg 93%)
-*'''[[براکولي|د براکولي پاڼې]]''' (800 μg 89%) - Acc. to [http://www.nal.usda.gov/fnic/foodcomp/search/ USDA database]. Broccoli florets supposedly have much less - see note<ref>The RAE value in the USDA data for broccoli leaves is similar to the IU value for broccoli florets, which implies rather improbably that the leaves have about 20 times as much beta-carotene. It is possible that there was an error in the table.<!--This is not "original research"! I could just put a {{verify credibility}} tag on this, but I thought it would be better to specify why it seems incredible. If you think the value of 800 μg is good, let's discuss it on the talk page. --></ref>.
+*'''[[براکولي|د براکولي پاڼې]]''' (800 μg 89%) - Acc. to [http://www.nal.usda.gov/fnic/foodcomp/search/ USDA توکبنسټ]. Broccoli florets supposedly have much less - see note<ref>The RAE value in the USDA data for broccoli leaves is similar to the IU value for broccoli florets, which implies rather improbably that the leaves have about 20 times as much beta-carotene. It is possible that there was an error in the table.<!--This is not "original research"! I could just put a {{verify credibility}} tag on this, but I thought it would be better to specify why it seems incredible. If you think the value of 800 μg is good, let's discuss it on the talk page. --></ref>.
 *'''[[خواږه کچالو]]''' (709 μg 79%)
 *'''[[kale]]''' (681 μg 76%)
 *'''[[کوچ]]''' (684 μg 76%)
@@ -34,7 +33,7 @@
 *[[winter squash]]
 </div>
 
-Note: bracketed values are retinol equivalences and percentage of the adult male [[Recommended Dietary Allowance|RDA]] per 100g.
+يادونه: هغه ګڼ چې په ليندکيو کې کښل شوی هغه په هر ۱۰۰ ګرامو کې د رېټانول کچه او په يوه بالغه نارينه کې يې د سلنې کچه هغه کچه ښکاره کوي چې د غذايي کارپوهانو لخوا يې په هر سپارښتنه شوې. 
 
 Conversion of carotene to retinol varies from person to person and bioavailability of carotene in food varies.<ref>{{cite journal |author=Borel P, Drai J, Faure H, ''et al'' |title=[Recent knowledge about intestinal absorption and cleavage of carotenoids] |language=French |journal=Ann. Biol. Clin. (Paris) |volume=63 |issue=2 |pages=165–77 |year=2005 |pmid=15771974 |doi=}}</ref><ref>{{cite journal |author=Tang G, Qin J, Dolnikowski GG, Russell RM, Grusak MA |title=Spinach or carrots can supply significant amounts of vitamin A as assessed by feeding with intrinsically deuterated vegetables |journal=Am. J. Clin. Nutr. |volume=82 |issue=4 |pages=821–8 |year=2005 |pmid=16210712 |doi=}}</ref>
 
